# excel2json-rs

./: Cargo.toml  README.md
example/data/: table1.xlsx  table2.xlsx
src/: convert.rs  main.rs  worker.rs
ui/: appwindow.slint
