[package]
name = "excel2json-rs"
version = "0.1.0"
authors = ["shy <shy@gmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.0"
rfd = "0.11.3"

[build-dependencies]
slint-build = "1.0"
